# template_gui_package

./: CMakeLists.txt  README.md  package.xml
include/template_gui_package/: backup_controller.h  backup_controller.ui  crawler_gui.h  crawler_gui.ui  omni_gui.h  omni_gui.ui
msg/: Buttons.msg  GoToInfo.msg  MotorCurrent.msg  MotorPosition.msg  MotorPower.msg  MotorSpeed.msg  MotorVoltage.msg
nodes/: crawler_gui_node.cpp
src/: backup_controller.cpp  crawler_gui.cpp  omni_gui.cpp
