<?xml version="1.0"?>
<package format="2">
  <name>template_gui_package</name>
  <version>0.0.0</version>
  <description>Your Description Here</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="kris@todo.todo">kris</maintainer>

  <!-- One license tag required, multiple allowed -->
  <license>TODO</license>

  <!-- Build tool dependency -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>libboost-date-time-dev</build_depend>
  <build_depend>libboost-thread-dev</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>roscpp_serialization</exec_depend>
  <exec_depend>rostime</exec_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
